[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hzl-cluster"
version = "1.0.0"
description = "Distributed AI routing and orchestration for Raspberry Pi clusters"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Ryann Lynn Murphy", email = "ryannlynncontact@gmail.com"},
]
keywords = ["raspberry-pi", "cluster", "ai", "routing", "orchestration", "claude"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: System :: Distributed Computing",
]
dependencies = [
    "aiohttp>=3.9.0",
    "psutil>=5.9.0",
    "pyyaml>=6.0",
]

[project.urls]
Homepage = "https://github.com/ryannlynnmurphy/hzl-cluster"
Repository = "https://github.com/ryannlynnmurphy/hzl-cluster"

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio"]

[tool.setuptools.packages.find]
include = ["hzl_cluster*"]
